[package]
name = "juniper-axum-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tokio-tungstenite = "0.21.0"
juniper = { git = "https://github.com/graphql-rust/juniper.git", rev = "86b5319", features = ["uuid"] }
juniper_axum = { git = "https://github.com/graphql-rust/juniper.git", rev = "86b5319", package = "juniper_axum", features = ["subscriptions"] }
juniper_graphql_ws = { git = "https://github.com/graphql-rust/juniper.git", rev = "86b5319", package = "juniper_graphql_ws" }
serde = { version = "1.0.197", features = ["derive"] }
surrealdb = "1.2.2"
eyre = "0.6.12"
uuid = { version = "1.7.0", features = ["serde", "v7"] }
argonautica = "0.2.0"
dotenvy = "0.15.7"
futures = "0.3.30"
log = "0.4.21"
env_logger = "0.11.3"
